--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-loadable": "^5.5.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.0",
     "swiper": "^6.7.5",
     "web-vitals": "^1.0.1"
   },
